Pre overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ code {
 h2 {
   text-align: center;
 }
+
+pre {
+  overflow-x: scroll;
+}
